--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" href="./keyboard.svg" type="image/x-icon">
-  <title>Document</title>
+  <title>Virtual Keyboard for Windows</title>
 </head>
+
 <body>
+  <section class="main">
+    <h1>Virtual Keyboard for Windows</h1>
+    <div class="text-area">
+    </div>
+    <div class="keyboard">
+    </div>
+  </section>
+
+
+  <script src="./keys_array.js"></script>
   <script src="./app.js"></script>
 </body>
 </html>
