feat: add functional for Enter and Backspace buttons, add audio when button clecked

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,17 +8,10 @@
   <link rel="shortcut icon" href="./keyboard.svg" type="image/x-icon">
   <title>Virtual Keyboard for Windows</title>
 </head>
-
 <body>
-  <section class="main">
-    <h1>Virtual Keyboard for Windows</h1>
-    <div class="text-area">
-    </div>
-    <div class="keyboard">
-    </div>
-  </section>
-
-
+  <audio id="myAudio">
+    <source src="./button-click.mp3" type="audio/mp3">
+  </audio>
   <script src="./keys_array.js"></script>
   <script src="./app.js"></script>
 </body>
