feat: change keys colors, add polish keys array, add aditional.js for aditional content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <title>Virtual Keyboard for Windows</title>
 </head>
 <body>
+  <script src="./keys_array_polish.js"></script>
   <script src="./keys_array.js"></script>
+  <script src="./additional.js"></script>
   <script src="./app.js"></script>
 </body>
 </html>
